# ON1Builder

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  TODO_COPILOT.md  coverage.json  debug_token_mappings.py  docker-compose.yml  fix_token_mappings.py  ignition.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_dev.sh  strategy_weights.json  test_eth_price.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  python-publish.yml  release-drafter.yml
configs/: .env.example
configs/chains/: config.yaml
data/: token_addresses.json  token_symbols.json
data/abi/: aave_flashloan_abi.json  aave_pool_abi.json  erc20_abi.json  gas_price_oracle_abi.json  sushiswap_abi.json  uniswap_abi.json
data/schema/: transaction_history.sql
deploy/: backup_config.sh  backup_data.sh  build_and_push.sh  cron_setup.sh  deploy_helper.sh  deploy_prod.sh  deploy_prod_multi_chain.sh  docker-compose.multi-chain.yml  docker-compose.prod.yml  emergency_shutdown.sh  security_audit.sh  set_permissions.sh  verify_integration.sh  verify_multi_chain.sh
docker/compose/: docker-compose.multi-chain.yml  docker-compose.prod.yml
docs/: DEPLOYMENT.md  README.md  SECURITY.md  alert_system.md  architecture.md  post_deployment_checklist.md  transaction_simulation.md  usage_guide.md
docs/examples/: custom_strategy_example.md  multi_chain_example.md  single_chain_example.html  single_chain_example.md
docs/guides/: getting_started.html  getting_started.md  installation.html  installation.md
docs/reference/: configuration_reference.md
infra/bash/: backup_config.sh  backup_data.sh  cron_setup.sh  deploy.sh  deploy_helper.sh  deploy_prod.sh  deploy_prod_multi_chain.sh  security_audit.sh  set_permissions.sh  vault_init.sh  verify_integration.sh  verify_multi_chain.sh
scripts/: convert_md_to_html.py  setup_dev_environment.sh
scripts/python/: __init__.py  abi_registry.py  app.py  app_multi_chain.py  chain_worker.py  configuration.py  configuration_multi_chain.py  db_manager.py  main.py  main_multi_chain.py  market_monitor.py  multi_chain_core.py  safety_net.py  strategy_net.py  transaction_core.py  txpool_monitor.py
scripts/python/pyutils/: __init__.py
src/on1builder/: __init__.py  __main__.py
src/on1builder/cli/: __init__.py  config.py  config_cmd.py  run_cmd.py  setup_wizard.py  status_cmd.py
src/on1builder/config/: __init__.py  config.py  configuration.py  loaders.py  manager.py  settings.py  validation.py
src/on1builder/core/: __init__.py  balance_manager.py  chain_worker.py  container.py  main_core.py  main_orchestrator.py  multi_chain_core.py  multi_chain_orchestrator.py  nonce_core.py  nonce_manager.py  transaction_core.py  transaction_manager.py
src/on1builder/engines/: __init__.py  chain_worker.py  safety_guard.py  safety_net.py  strategy_executor.py  strategy_net.py
src/on1builder/integrations/: abi_registry.py  external_apis.py
src/on1builder/monitoring/: __init__.py  market_data_feed.py  market_monitor.py  performance_monitor.py  txpool_monitor.py  txpool_scanner.py
src/on1builder/persistence/: __init__.py  db_interface.py  db_manager.py  db_models.py
src/on1builder/utils/: __init__.py  cli_helpers.py  config_redactor.py  constants.py  container.py  custom_exceptions.py  error_handling.py  error_recovery.py  gas_optimizer.py  logger.py  logging_config.py  memory_optimizer.py  notification_service.py  notifications.py  path_helpers.py  profit_calculator.py  singleton.py  web3_factory.py
tests/: README.md  __init__.py  config_cmd-test.py  run_cfg-tests.py  run_comprehensive_tests.sh  run_edge_tests.sh  test_abi_registry.py  test_abiregistry.py  test_balance_manager.py  test_balance_manager_comprehensive.py  test_basic_smoke.py  test_chain_worker.py  test_chain_worker_comprehensive.py  test_chain_worker_logic.py  test_cli_commands.py  test_cli_helpers_comprehensive.py  test_components.py  test_comprehensive.py  test_config_manager_comprehensive.py  test_configuration.py  test_container.py  test_custom_exceptions.py  test_custom_exceptions_comprehensive.py  test_database_interface_async.py  test_db_interface.py  test_edge_cases.py  test_error_handling.py  test_error_handling_comprehensive.py  test_error_recovery_comprehensive.py  test_external_api_integration.py  test_external_api_logic.py  test_external_apis.py  test_external_apis_comprehensive.py  test_functional.py  test_gas_optimizer_comprehensive.py  test_init.py  test_integration.py  test_logging_config.py  test_logging_config_comprehensive.py  test_loggingconfig.py  (+44 more)
tests/cli/: test_cli.py  test_cli_modules.py  test_main.py
tests/config/: test_config_loaders.py  test_config_settings.py
tests/core/: test_apiconfig.py  test_chain_worker.py  test_configuration.py  test_main_orchestrator.py  test_maincore.py  test_multi_chain_core.py  test_multi_chain_orchestrator.py  test_nonce_manager.py  test_noncecore.py  test_transaction_manager.py  test_transactioncore.py
tests/edgecases/: test_network_failures.py  test_transaction_retry.py
tests/engines/: __init__.py  test_chain_worker.py  test_safety_guard.py  test_safetynet.py  test_strategyexecutionerror.py
tests/functional/: __init__.py  test_components.py
tests/integrations/: test_abiregistry.py  test_component_integrations.py
tests/legacy/: __init__.py
tests/monitoring/: test_market_data_feed.py  test_marketmonitor.py  test_mempoolmonitor.py  test_txpool_scanner.py  test_txpoolmonitor.py
tests/persistence/: test_db_manager.py  test_db_models.py
tests/utils/: test_custom_exceptions.py  test_logger.py  test_loggingconfig.py  test_notifications.py  test_path_helpers.py  test_strategyexecutionerror.py
tools/: consolidate_tokens.py  ignition.py
