[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "on1builder"
version = "2.3.0"
description = "ON1Builder is a cross-chain arbitrage bot for Ethereum and EVM-compatible networks, designed to automate profitable trading opportunities."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]
authors = [
  { name = "john0n1", email = "john@on1.no" }
]

dependencies = [
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.13.4",
  "aiosignal==1.4.0",
  "annotated-types==0.7.0",
  "attrs==26.1.0",
  "bitarray==3.8.0",
  "cachetools==7.0.5",
  "certifi==2026.2.25",
  "charset-normalizer==3.4.6",
  "ckzg==2.1.7",
  "click==8.3.1",
  "colorlog==6.10.1",
  "cytoolz==1.1.0",
  "eth-account==0.13.7",
  "eth-hash==0.8.0",
  "eth-keyfile==0.8.1",
  "eth-keys==0.7.0",
  "eth-rlp==2.2.0",
  "eth-typing==6.0.0",
  "eth-utils==6.0.0",
  "eth-abi==5.2.0",
  "frozenlist==1.8.0",
  "greenlet==3.3.2",
  "hexbytes==1.3.1",
  "idna==3.11",
  "markdown-it-py==4.0.0",
  "mdurl==0.1.2",
  "multidict==6.7.1",
  "parsimonious==0.11.0",
  "prompt-toolkit==3.0.52",
  "propcache==0.4.1",
  "psutil==7.2.2",
  "pycryptodome==3.23.0",
  "pydantic==2.12.5",
  "pydantic-settings==2.13.1",
  "pydantic-core==2.41.5",
  "pygments==2.20.0",
  "python-dotenv==1.2.2",
  "pyunormalize==17.0.0",
  "questionary==2.1.1",
  "regex==2026.3.32",
  "requests==2.33.0",
  "rich==14.3.3",
  "rlp==4.1.0",
  "shellingham==1.5.4",
  "sqlalchemy==2.0.48",
  "toolz==1.1.0",
  "typer==0.24.1",
  "types-requests==2.33.0.20260327",
  "typing-inspection==0.4.2",
  "typing-extensions==4.15.0",
  "urllib3==2.6.3",
  "wcwidth==0.6.0",
  "web3==7.14.1",
  "websockets==16.0",
  "yarl==1.23.0"
]

[project.scripts]
on1builder = "on1builder.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]

# development dependencies (no versions specified)
[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "black",
  "isort",
  "mypy",
  "flake8",
  "pre-commit",
  "twine"
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:websockets\\.legacy is deprecated:DeprecationWarning",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
on1builder = ["resources/**/*"]
