[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "on1builder"
version = "2.3.0"
description = "ON1Builder is a cross-chain arbitrage bot for Ethereum and EVM-compatible networks, designed to automate profitable trading opportunities."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]
authors = [
  { name = "john0n1", email = "john@on1.no" }
]

dependencies = [
  # Direct project dependencies only — transitive deps resolved by pip.
  "aiohttp>=3.9,<4",
  "aiosqlite>=0.20",
  "cachetools>=5",
  "colorlog>=6",
  "psutil>=5",
  "pydantic>=2.5,<3",
  "pydantic-settings>=2,<3",
  "python-dotenv>=1",
  "questionary>=2,<3",
  "rich>=13",
  "sqlalchemy[asyncio]>=2,<3",
  "typer>=0.9",
  "web3>=7,<8",
]

[project.scripts]
on1builder = "on1builder.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]

# development dependencies (no versions specified)
[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "black",
  "isort",
  "mypy",
  "flake8",
  "pre-commit"
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:websockets\\.legacy is deprecated:DeprecationWarning",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
on1builder = ["resources/**/*"]
