[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-on1builder"
version = "2.3.1"
description = "ON1Builder is a cross-chain arbitrage bot for Ethereum and EVM-compatible networks, designed to automate profitable trading opportunities."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]
authors = [
  { name = "john0n1", email = "john@on1.no" }
]

dependencies = [
  # Direct project dependencies only — transitive deps resolved by pip.
  "aiohttp>=3.9,<4",
  "aiosqlite>=0.20",
  "cachetools>=5",
  "colorlog>=6",
  "psutil>=5",
  "pydantic>=2.5,<3",
  "pydantic-settings>=2,<3",
  "python-dotenv>=1",
  "questionary>=2,<3",
  "rich>=13",
  "sqlalchemy[asyncio]>=2,<3",
  "typer>=0.9",
  "web3>=7,<8",
]

[project.scripts]
on1builder = "on1builder.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]

# development dependencies (no versions specified)
[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "black",
  "isort",
  "mypy",
  "flake8",
  "pre-commit"
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:websockets\\.legacy is deprecated:DeprecationWarning",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
on1builder = ["resources/**/*"]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501"]
fixable = ["ALL"]

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
no_strict_optional = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "on1builder.core.balance_manager",
  "on1builder.core.nonce_manager",
  "on1builder.core.transaction_manager",
  "on1builder.engines.safety_guard",
  "on1builder.engines.strategy_executor",
  "on1builder.integrations.external_apis",
  "on1builder.monitoring.market_data_feed",
  "on1builder.monitoring.txpool_scanner",
  "on1builder.persistence.db_interface",
  "on1builder.persistence.db_models",
  "on1builder.config.loaders",
  "on1builder.config.settings",
  "on1builder.utils.cli_helpers",
  "on1builder.utils.container",
  "on1builder.utils.custom_exceptions",
  "on1builder.utils.error_handling",
  "on1builder.utils.error_recovery",
  "on1builder.utils.gas_optimizer",
  "on1builder.utils.logging_config",
  "on1builder.utils.notification_service",
  "on1builder.utils.profit_calculator",
  "on1builder.utils.singleton",
  "on1builder.utils.web3_factory",
]
ignore_errors = true
